amqp/1.8/modules/ROOT/pages/amqp-connector-troubleshooting.adoc
= Troubleshooting AMQP Connector 

To troubleshoot Anypoint Connector for AMQP (AMQP Connector), become familiar with the information about enabling verbose logging and interpreting commonly thrown messages.

== Enable Verbose Logging

To get a better understanding of why an application's interaction with the AMQP Connector is failing, temporarily enable verbose logging for AMQP connector. +

Remember to always disable the enhanced verbosity after troubleshooting because it affects your Mule application performance.

To enable verbose logging in the configuration file:

. Access Anypoint Studio and navigate to the *Package Explorer* view.
. Open your application's project.
. Open the `src/main/resources` path folder.
. Open the `log4j2.xml` file inside the folder.
. Add an `<AsyncLogger>` tag inside the `<Loggers>` tag:
+
[source,xml,linenums]
----
			<Loggers>
				...
				<AsyncLogger name="com.mule.extensions.amqp" level="DEBUG"/>
				...
			</Loggers>
----
[start=6]
. Save your application changes.
. Click the project name in *Package Explorer* and then click *Run* > *Run As* > *Mule Application*.

== Troubleshoot XML Parameters Order in AMQP Publish Operation

When upgrading from AMQP Connector version 1.7.7 to 1.8.0, you can encounter build failures such as the following: 

[source,xml,linenums]
----
[ERROR] org.xml.sax.SAXParseException; lineNumber: X; columnNumber: Y; cvc-complex-type.2.4.a: Invalid content was found starting with element '{"http://www.mulesoft.org/schema/mule/amqp":routing-keys}'. One of '{"http://www.mulesoft.org/schema/mule/amqp":message}' is expected.
----

This occurs because your XML configuration includes both `fallback-exchange-definition` and `routing-keys` parameters, and there is a change in the XML schema validation requirements for AMQP Connector 1.8.x:

XML parameters order in AMQP Connector version 1.7.7:

[source,xml,linenums]
----
<amqp:publish>
    <reconnect-forever />
    <amqp:fallback-exchange-definition />
    <amqp:routing-keys>
        <amqp:routing-key />
    </amqp:routing-keys>
    <amqp:message>
        <amqp:properties />
    </amqp:message>
</amqp:publish>
----

XML parameters order in AMQP Connector version 1.8.x:

[source,xml,linenums]
----
<amqp:publish>
    <reconnect-forever />
    <amqp:routing-keys>
        <amqp:routing-key />
    </amqp:routing-keys>
    <amqp:fallback-exchange-definition />
    <amqp:message>
        <amqp:properties />
    </amqp:message>
</amqp:publish>

----

To resolve this issue, update your XML configuration with the correct XML parameter order:

. Move the `amqp:routing-keys` parameter before the `amqp:fallback-exchange-definition` parameter.
. Ensure all other XML parameters maintain their relative order.
. Update any XML configurations that use both parameters to follow the correct XML parameter order.

Consider these points:

* Update your XML configurations only when you use both `routing-keys` and `fallback-exchange-definition` parameters together.
* XML configurations using only one of these parameters either `routing-keys` or `fallback-exchange-definition` are not affected.
* The functionality of AMQP Connector in version 1.8.x remains the same; only the XML structure changed.

== Understand Common Throws

Here is a list of common throw messages and how to interpret them:

* AMQP:CONNECTIVITY

	The connection is no longer valid. It is disposed of, but you can apply a reconnection policy if defined in the application setup.

* AMQP:CONSUMING

	An error occurred while consuming messages and could not be identified.

* AMQP:CREATION_NOT_ALLOWED

	The queue or exchange does not exist, and the disableCreationOfFallbackQueues or disableCreationOfFallbackExchanges parameters is set.

* AMQP:QUEUE_NOT_FOUND

	The queue defined does not exist, and no fallbackQueueDefinition is provided.

* AMQP:RETRY_EXHAUSTED

 The maximum number of retries for the operation is reached.

* AMQP:TIMEOUT

 The timeout for the requested operation is exceeded.

* AMQP:ILLEGAL_BODY

 The message body is invalid, for example, a null body.

* AMQP:UNROUTABLE_MESSAGE

 The message could not be routed, either because it could not be immediately delivered or because there are no queue bounds to the exchange depending on the exchange configuration in the broker.

* AMQP:PUBLISHING

 An error occurred while publishing messages and could not be identified.

* AMQP:PUBLISHING_CONSUMING

 A generic error for publishing-consuming, which could not be identified.

* AMQP:EXCHANGE_NOT_FOUND

 The exchange defined does not exist, and no fallbackExchangeDefinition exists.

* AMQP:EXCHANGE_DECLARATION

 An exception occurred during an exchange declaration.

* AMQP:BLOCKED_BROKER

 An error occurred while sending a message because the broker is blocked as it ran out of resources.

* AMQP:ACKNOWLEDGING

 A generic error for acknowledging, which could not be identified.

* AMQP:DELIVER_TAG_NOT_FOUND

 The deliver tag to acknowledge was not found by the broker.

* AMQP:REJECTING

 A generic error for rejecting, which could not be identified.

* AMQP:REQUEUE

 A generic error on requeue process.

* AMQP:NO_CHANNEL_AVAILABLE

 A generic error when the channel is not available.


== See Also

* xref:amqp-documentation.adoc[AMQP Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
include::release-notes::partial$release-notes/rn-known-issues.adoc[tag=knownIssuesSeeAlsoLink]
